--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,11 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+NavLink .nav-link{
+  text-decoration: none;
+  list-style: none;
+  padding: 5px;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
